--- a/gerenciamentosTarefas/src/main/resources/application-dev.properties
+++ b/gerenciamentosTarefas/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciamento-tarefa
 spring.datasource.username=postgres
-spring.datasource.password=ASDF12qw@
+spring.datasource.password=22303634
